--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+    
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -243,5 +244,29 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", function() {
+    fetch('api/products.php')
+        .then(response => response.json())
+        .then(products => {
+            const container = document.getElementById('featured-products');
+            container.innerHTML = '';
+            products.slice(0, 3).forEach(product => { // Show first 3 as featured
+                container.innerHTML += `
+                    <div class="col-md-4 mb-4">
+                        <div class="card h-100">
+                            <img src="${product.image}" class="card-img-top" alt="${product.name}" style="height: 250px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title">${product.name}</h5>
+                                <p class="card-text">${product.description}</p>
+                                <h6 class="text-primary fw-bold">$${product.price}</h6>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            });
+        });
+});
+</script>
 </body>
 </html>
