--- a/products.html
+++ b/products.html
@@ -41,8 +41,8 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header text-white" style="background: url('https://i.pinimg.com/1200x/38/c2/5d/38c25d7451d15fb59b33f9253342860c.jpg') 
-    center center/cover no-repeat; min-height: 260px;  aspect-ratio: 15/5;">
+    <section class="page-header text-white" style="background: url('https://i.pinimg.com/1200x/d0/89/60/d08960c7af8680952d4ee38432813b4a.jpg') 
+    center center/cover no-repeat; min-height: 300px; aspect-ratio: 15/5; opacity: 0.8;">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5>StyleHub</h5>
+                    <h5>Luxe & Luminous</h5>
                     <p>Premium clothing for the modern lifestyle.</p>
                     <div class="social-links">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
@@ -183,7 +183,7 @@
                     </p>
                     <p class="text-white-50">
                         <i class="fas fa-envelope me-2"></i>
-                        info@stylehub.com
+                        info@luxeNluminous.com
                     </p>
                 </div>
             </div>
