--- a/team-member.html
+++ b/team-member.html
@@ -69,7 +69,7 @@
                             <img src="https://i.pinimg.com/736x/18/1b/0f/181b0f074c0cb0860e1cfdb5842b517d.jpg " alt="Puth Sovannary" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
-                                    <a href="https://web.facebook.com/?_rdc=1&_rdr#"><i class="fa-brands fa-facebook"></i></a>
+                                    <a href="https://www.facebook.com/ipwettyluwary?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
                                     <a href="https://t.me/idk_starlvcies"><i class="fa-brands fa-telegram"></i></a>
                                     <a href="#"><i class="fas fa-envelope"></i></a>
                                 </div>
