--- a/sign-in.html
+++ b/sign-in.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand animate-brand" href="index.html">
-                <i class="fa-solid fa-shop"></i> Luxe & Luminous 
+                <i class="fa-solid fa-shop"></i> Luxe & <span>Luminous</span>  
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                                 <div class="auth-image-content">
                                     <!-- <img src="https://i.pinimg.com/736x/4c/ab/c9/4cabc97ce9c3edfef50e10d319b16818.jpg" alt="Fashion" class="img-fluid"> -->
                                     <div class="auth-overlay">
-                                        <h3 class="text-white mb-3">Welcome Back to Luxe & Luminous</h3>
+                                        <h3 class="text-white mb-3">Welcome Back to Luxe & <span>Luminous</span> </h3>
                                         <p class="text-white-50">Discover the latest fashion trends and express your unique style.</p>
                                     </div>
                                 </div>
