--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand animate-brand" href="index.html">
-                <i class="fa-solid fa-shop"></i> Luxe & Luminous 
+                <i class="fa-solid fa-shop"></i> Luxe & <span>Luminous</span> 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5>StyleHub</h5>
+                    <h5>Luxe & <span>Luminous</span> </h5>
                     <p>Premium clothing for the modern lifestyle.</p>
                     <div class="social-links">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
@@ -248,7 +248,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2025 Luxe & Luminous. All rights reserved.</p>
+                <p class="mb-0">&copy; 2025 Luxe & <span>Luminous</span> . All rights reserved.</p>
             </div>
         </div>
     </footer>
