--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a class="navbar-brand animate-brand" href="index.html">
                 <!-- <i class="fas fa-tshirt me-2"></i>StyleHub -->
-                <i class="fa-solid fa-shop"></i> Luxe & Luminous 
+                <i class="fa-solid fa-shop"></i> Luxe & <span>Luminous</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -142,7 +142,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="animate-slide-left">
-                        <h2 class="display-6 fw-bold mb-4">About Luxe & Luminous </h2>
+                        <h2 class="display-6 fw-bold mb-4">About Luxe & <span>Luminous</span> </h2>
                         <p class="lead mb-4">
                             We're passionate about bringing you the latest fashion trends with uncompromising quality.
                         </p>
@@ -193,7 +193,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5>Luxe & Luminous</h5>
+                    <h5>Luxe & <span>Luminous</span></h5>
                     <p>Premium clothing for the modern lifestyle.</p>
                     <div class="social-links">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
@@ -237,7 +237,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2025 Luxe & Luminous . All rights reserved.</p>
+                <p class="mb-0">&copy; 2025 Luxe & <span>Luminous</span>  . All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -245,28 +245,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-document.addEventListener("DOMContentLoaded", function() {
-    fetch('api/products.php')
-        .then(response => response.json())
-        .then(products => {
-            const container = document.getElementById('featured-products');
-            container.innerHTML = '';
-            products.slice(0, 3).forEach(product => { // Show first 3 as featured
-                container.innerHTML += `
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100">
-                            <img src="${product.image}" class="card-img-top" alt="${product.name}" style="height: 250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h5 class="card-title">${product.name}</h5>
-                                <p class="card-text">${product.description}</p>
-                                <h6 class="text-primary fw-bold">$${product.price}</h6>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch('api/products.php')
+                .then(response => response.json())
+                .then(products => {
+                    const container = document.getElementById('featured-products');
+                    container.innerHTML = '';
+                    products.slice(0, 3).forEach(product => { // Show first 3 as featured
+                        container.innerHTML += `
+                            <div class="col-md-4 mb-4">
+                                <div class="card h-100">
+                                    <img src="${product.image}" class="card-img-top" alt="${product.name}" style="height: 250px; object-fit: cover;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">${product.name}</h5>
+                                        <p class="card-text">${product.description}</p>
+                                        <h6 class="text-primary fw-bold">$${product.price}</h6>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                `;
-            });
+                        `;
+                    });
+                });
         });
-});
-</script>
+    </script>
 </body>
 </html>
