--- a/contact.html
+++ b/contact.html
@@ -39,29 +39,16 @@
             </div>
         </div>
     </nav>
-
-    <!-- Page Header -->
-    <!-- <section class="page-header bg-primary text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h1 class="display-4 fw-bold animate-fade-in">Contact Us</h1>
-                    <p class="lead">Get in touch with our team</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Contact Section -->
+    <!-- Hero Section -->
     <section class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mb-5">
                     <div class="animate-slide-up">
-                        <h2 class="mb-4">Send us a Message</h2>
+                        <h2 class="mb-5 my-4 text-center">Send us a Message</h2>
                         <form id="contactForm">
                             <div class="row">
-                                <div class="col-md-6 mb-3">
+                                <div class="col-md-6 mb-4">
                                     <label for="firstName" class="form-label">First Name</label>
                                     <input type="text" class="form-control" id="firstName" required>
                                 </div>
@@ -103,7 +90,7 @@
                 
                 <div class="col-lg-4">
                     <div class="animate-slide-up">
-                        <h3 class="mb-4">Contact Information</h3>
+                        <h3 class="mb-5 my-4">Contact Information</h3>
                         
                         <div class="contact-info-item mb-4">
                             <div class="d-flex align-items-start">
