--- a/team-member.html
+++ b/team-member.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
-                    <h2 class="display-6 fw-bold">Leadership Team</h2>
+                    <h2 class="display-6 fw-bold my-4">Leadership Team</h2>
                     <p class="lead text-muted">Experienced professionals dedicated to bringing you the best fashion experience</p>
                 </div>
             </div>
