insert my image and link to my telegram and fixed code

--- a/team-member.html
+++ b/team-member.html
@@ -127,11 +127,11 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="team-card animate-card">
                         <div class="team-image">
-                            <img src="https://i.pinimg.com/736x/02/42/62/024262d37a16f7a31ab76de354f27eb4.jpg" alt="Mouk Sona" class="img-fluid">
+                            <img src="https://i.pinimg.com/1200x/26/96/af/2696af0e2256a1de1f66a05e0629cf41.jpg" alt="Mouk Sona" class="img-fluid">
                             <div class="team-overlay">
                                 <div class="social-links">
                                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                                    <a href="https://web.telegram.org/a/"><i class="fa-brands fa-telegram"></i></a>
                                     <a href="#"><i class="fas fa-envelope"></i></a>
                                 </div>
                             </div>
