--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="animate-slide-right">
-                        <!-- <video autoplay="" src="img/vdo1.mp4"></video> -->
-                        <!-- <video autoplay>
-                        <source src="img/vdo1.mp4" type="video/mp4">
-                        </video> -->
-                        <img src="https://i.pinimg.com/736x/4a/87/ee/4a87ee20fc3dc7e6dab466c6bdd96c62.jpg" width="300" height="300" alt="img">
+                        <video src="img/vdo1.mp4" muted="1" autoplay="1" width="200"></video>
+                        <video src="img/vdo1.mp4" muted="1" autoplay="1" width="200"></video>
+                        <video src="img/vdo1.mp4" muted="1" autoplay="1" width="200"></video>
+
+
+                        <!-- <img src="https://i.pinimg.com/736x/4a/87/ee/4a87ee20fc3dc7e6dab466c6bdd96c62.jpg" width="300" height="300" alt="img"> -->
 
                     </div>
                 </div>
@@ -183,7 +184,7 @@
                             </div>
                         </form>
                     </div>
-                </div
+                </div>
             </div>
         </div>
     </section>
