--- a/index.html
+++ b/index.html
@@ -126,13 +126,166 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
-                    <h2 class="display-5 fw-bold animate-fade-in">Featured Products</h2>
-                    <p class="lead text-muted">Discover our most popular items</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 text-center mb-5">
+                                    <h2 class="display-5 fw-bold animate-fade-in">Featured Products</h2>
+                                    <p class="lead text-muted">Discover our most popular items</p>
+                                </div>
+                            </div>
+                            <div class="row g-4">
+                                <!-- Product 1 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/1200x/6f/d4/c6/6fd4c624ce6e6ad2d08aa6a5d4281e34.jpg" class="card-img-top product-image" alt="Classic Denim Jacket">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Classic Denim Jacket</h5>
+                                            <p class="card-text">A timeless denim jacket for all seasons. Durable, stylish, and comfortable.</p>
+                                            <h6 class="text-primary fw-bold">$49.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 2 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/3a/aa/f0/3aaaf0707c98512b3d9fb95d0c176fcd.jpg" class="card-img-top product-image" alt="Elegant Summer Dress">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Elegant Summer Dress</h5>
+                                            <p class="card-text">Lightweight and breezy, perfect for warm days and special occasions.</p>
+                                            <h6 class="text-primary fw-bold">$39.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 3 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/7d/80/b9/7d80b9afe4f1e97263ca6f797fe79f10.jpg" class="card-img-top product-image" alt="Men's Casual Shirt">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Men's Casual Shirt</h5>
+                                            <p class="card-text">Soft cotton shirt with a modern fit. Ideal for both work and play.</p>
+                                            <h6 class="text-primary fw-bold">$29.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 4 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/1200x/2b/e2/50/2be25082d95f78cfeac910773ef65ef5.jpg" class="card-img-top product-image" alt="Women's Knit Sweater">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Women's Knit Sweater</h5>
+                                            <p class="card-text">Cozy and stylish knit sweater, available in multiple colors.</p>
+                                            <h6 class="text-primary fw-bold">$34.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 5 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/1200x/c3/08/b8/c308b8715d88ca87b8fbe0d19b0da85e.jpg" class="card-img-top product-image" alt="Slim Fit Jeans">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Slim Fit Jeans</h5>
+                                            <p class="card-text">Modern slim fit jeans with stretch for comfort and style.</p>
+                                            <h6 class="text-primary fw-bold">$44.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 6 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/09/88/c4/0988c4c1e699a045ca21556bc8a76a08.jpg" class="card-img-top product-image" alt="Floral Print Skirt">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Floral Print Skirt</h5>
+                                            <p class="card-text">Brighten your day with this beautiful floral print skirt.</p>
+                                            <h6 class="text-primary fw-bold">$27.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 7 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/1200x/03/99/ac/0399ac23f9c9c32df7eaa0ed5a21bbfb.jpg" class="card-img-top product-image" alt="Men's Polo Shirt">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Men's Polo Shirt</h5>
+                                            <p class="card-text">Classic polo shirt for a smart-casual look, perfect for any occasion.</p>
+                                            <h6 class="text-primary fw-bold">$24.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 8 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/76/4f/53/764f538051fbfcc56338a1c21d555b03.jpg" class="card-img-top product-image" alt="Women's Blazer">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Men's Blazer</h5>
+                                            <p class="card-text">Elegant blazer for a professional or chic look. Tailored fit.</p>
+                                            <h6 class="text-primary fw-bold">$59.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 9 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/0a/cc/23/0acc238e7dd4bd40606f0fa242966a0e.jpg" class="card-img-top product-image" alt="Unisex Hoodie">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Unisex Hoodie</h5>
+                                            <p class="card-text">Soft and warm hoodie for everyone. Available in all sizes.</p>
+                                            <h6 class="text-primary fw-bold">$32.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 10 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/52/e7/32/52e7329997e6e089b3f044976c754b47.jpg" class="card-img-top product-image" alt="Maxi Dress">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Maxi Dress</h5>
+                                            <p class="card-text">Flowy maxi dress for a relaxed yet elegant look.</p>
+                                            <h6 class="text-primary fw-bold">$54.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 11 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/736x/f1/a2/d2/f1a2d2c017eabd2b47ea19d2ea22a26d.jpg" class="card-img-top product-image" alt="Men's Bomber Jacket">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Men's Bomber Jacket</h5>
+                                            <p class="card-text">Trendy bomber jacket with a modern silhouette and premium feel.</p>
+                                            <h6 class="text-primary fw-bold">$69.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Product 12 -->
+                                <div class="col-md-3">
+                                    <div class="card h-100 product-card animate-card">
+                                        <img src="https://i.pinimg.com/1200x/ae/39/f2/ae39f2448b29b58a621be352c1c8f4b8.jpg" class="card-img-top product-image" alt="Women's Cardigan">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Women's Cardigan</h5>
+                                            <p class="card-text">Soft knit cardigan for layering and comfort all day long.</p>
+                                            <h6 class="text-primary fw-bold">$36.99</h6>
+                                            <a href="#" class="btn btn-primary w-100 mt-2 animate-button">Add to Cart</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <!-- </section>xt-muted">Discover our most popular items</p> -->
                 </div>
             </div>
-            <div class="row" id="featured-products">
-                <!-- Products will be loaded dynamically -->
-            </div>
+            <!-- <div class="row" id="featured-products">
+                Products will be loaded dynamically
+            </div> -->
         </div>
     </section>
 
