--- a/products.html
+++ b/products.html
@@ -52,7 +52,6 @@
             </div>
         </div>
     </section>
-
     <!-- Filters -->
     <section class="py-4 bg-light">
         <div class="container">
@@ -100,6 +99,8 @@
             </div>
         </div>
     </section>
+    <img src="" >
+
 
     <!-- Product Modal -->
     <div class="modal fade" id="productModal" tabindex="-1">
@@ -193,7 +194,7 @@
             </div>
         </div>
     </footer>
-
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/products.js"></script>
