--- a/team-member.html
+++ b/team-member.html
@@ -44,26 +44,15 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="sign-in.html">Sign In</a>
+              <a class="nav-link" href=""><i class="fa-solid fa-cart-shopping"></i></a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sign-in.html"><i class="fa-solid fa-user"></i></a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <!-- Page Header -->
-    <!-- <section class="page-header bg-primary text-white">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h1 class="display-4 fw-bold animate-fade-in">Our Team</h1>
-                    <p class="lead">Meet the passionate people behind StyleHub</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- Team Section -->
     <!-- Team Section -->
     <section class="py-5">
       <div class="container">
@@ -82,20 +71,20 @@
             <div class="team-card animate-card">
               <div class="team-image">
                 <img
-                  src="https://i.pinimg.com/736x/4a/f5/6f/4af56f787b27bfb2c6cc389d9815e281.jpg"
+                  src="https://i.pinimg.com/736x/74/8e/2a/748e2a39ebe25bf2ff2d48f099f5f6d5.jpg"
                   alt="Puth Sovannary"
                   class="img-fluid"
                 />
                 <div class="team-overlay">
                   <div class="social-links">
-                                    <a href="https://www.facebook.com/ipwettyluwary?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
-                                    <a href="https://t.me/idk_starlvcies"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="https://www.facebook.com/ipwettyluwary?mibextid=LQQJ4d"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://t.me/idk_starlvcies"><i class="fa-brands fa-telegram"></i></a>
                     <a href="#"><i class="fas fa-envelope"></i></a>
                   </div>
                 </div>
               </div>
               <div class="team-info text-center">
-                <h5>Puth Sovannary</h5>
+                <h5>──★ Puth Sovannary </h5>
                 <p class="text-primary">Team Leader</p>
                 <p class="text-muted">
                   With over 15 years in fashion retail, Sarah leads our vision
@@ -109,7 +98,7 @@
             <div class="team-card animate-card">
               <div class="team-image">
                 <img
-                  src="https://i.pinimg.com/736x/1c/5c/84/1c5c84f86d4b59100a10151378a1f766.jpg"
+                  src="https://i.pinimg.com/736x/b3/eb/d1/b3ebd17f20f14fe6626a3987add20421.jpg"
                   alt="Norm Srey Keo"
                   class="img-fluid"
                 />
@@ -122,7 +111,7 @@
                 </div>
               </div>
               <div class="team-info text-center">
-                <h5>Norm Srey Keo</h5>
+                <h5>──★ Norm Srey Keo</h5>
                 <p class="text-primary">Member</p>
                 <p class="text-muted">
                   With over 15 years in fashion retail, Sarah leads our vision
@@ -136,7 +125,7 @@
             <div class="team-card animate-card">
               <div class="team-image">
                 <img
-                  src="https://i.pinimg.com/736x/cf/70/83/cf7083ef0caba448ae28729cdcc44bee.jpg"
+                  src="https://i.pinimg.com/736x/ce/40/ef/ce40ef7b71aee02089531bf61803ff72.jpg"
                   alt="Phon Rotha"
                   class="img-fluid"
                 />
@@ -154,7 +143,7 @@
                 </div>
               </div>
               <div class="team-info text-center">
-                <h5>Phon Rotha</h5>
+                <h5>──★ Phon Rotha</h5>
                 <p class="text-primary">Member</p>
                 <p class="text-muted">
                   With over 15 years in fashion retail, Sarah leads our vision
@@ -181,7 +170,7 @@
                 </div>
               </div>
               <div class="team-info text-center">
-                <h5>Mouk Sona</h5>
+                <h5>──★ Mouk Sona</h5>
                 <p class="text-primary">Member</p>
                 <p class="text-muted">
                   With over 15 years in fashion retail, Sarah leads our vision
@@ -209,7 +198,7 @@
               <div class="row align-items-center">
                 <div class="col-md-4">
                   <img
-                    src="https://i.pinimg.com/736x/cf/e7/9a/cfe79a8cbe59d912d459d9db4e800444.jpg"
+                    src="https://i.pinimg.com/736x/87/0c/8f/870c8f83e510febab122409dd632963f.jpg"
                     alt="Design Team"
                     class="img-fluid rounded"
                   />
@@ -244,7 +233,7 @@
               <div class="row align-items-center">
                 <div class="col-md-4">
                   <img
-                    src="https://i.pinimg.com/736x/cf/e7/9a/cfe79a8cbe59d912d459d9db4e800444.jpg"
+                    src="https://i.pinimg.com/736x/31/0c/f8/310cf803e431a5aca603bf9b73d76ada.jpg"
                     alt="Quality Team"
                     class="img-fluid rounded"
                   />
@@ -279,7 +268,7 @@
               <div class="row align-items-center">
                 <div class="col-md-4">
                   <img
-                    src="https://i.pinimg.com/736x/cf/e7/9a/cfe79a8cbe59d912d459d9db4e800444.jpg"
+                    src="https://i.pinimg.com/1200x/1f/ef/9c/1fef9c58fd8d0738ecaf3bc5048f3362.jpg"
                     alt="Customer Service"
                     class="img-fluid rounded"
                   />
@@ -313,7 +302,7 @@
               <div class="row align-items-center">
                 <div class="col-md-4">
                   <img
-                    src="https://i.pinimg.com/736x/cf/e7/9a/cfe79a8cbe59d912d459d9db4e800444.jpg"
+                    src="https://i.pinimg.com/736x/16/dc/b0/16dcb0bf7d0f122690c0b0e1916494d4.jpg"
                     alt="Logistics Team"
                     class="img-fluid rounded"
                   />
@@ -423,7 +412,7 @@
             </p>
             <p class="text-white-50">
               <i class="fas fa-envelope me-2"></i>
-              info@stylehub.com
+              info@luxeNluminous.com
             </p>
           </div>
         </div>
