--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sign-in.html">Sign In</a>
+                        <a class="nav-link" href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sign-in.html"><i class="fa-solid fa-user"></i></a>
                     </li>
                 </ul>
             </div>
