--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">Products</a>
@@ -30,12 +30,15 @@
                         <a class="nav-link" href="team-member.html">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sign-in.html">Sign In</a>
+                        <a class="nav-link" href=""><i class="fa-solid fa-cart-shopping"></i></a>
                     </li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sign-in.html"><i class="fa-solid fa-user"></i></a>
+                    </li>
+                </ul>   
             </div>
         </div>
     </nav>
