--- a/products.html
+++ b/products.html
@@ -44,13 +44,18 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="page-header text-white" style="background: url('https://i.pinimg.com/1200x/d0/89/60/d08960c7af8680952d4ee38432813b4a.jpg') 
-    center center/cover no-repeat; min-height: 300px; aspect-ratio: 15/5; opacity: 0.8;">
-        <div class="container">
+    <!-- <section class="page-header text-white" style="background: url('https://i.pinimg.com/1200x/d0/89/60/d08960c7af8680952d4ee38432813b4a.jpg') 
+    center center/cover no-repeat; min-height: 300px; aspect-ratio: 15/5; opacity: 0.8;"> -->
+    <section class="page-header text-white position-relative" style="min-height: 300px; aspect-ratio: 15/5; overflow: hidden;">
+        <video autoplay muted loop playsinline class="w-100 h-100 position-absolute top-0 start-0 object-fit-cover" style="z-index:0; opacity:0.8;">
+            <source src="img/product.mp4" type="video/mp4">
+        </video>
+        
+    </section>
             <div class="row">
-                <div class="col-12 text-center">
-                    <h1 class="display-4 fw-bold animate-fade-in">Our Products</h1>
-                    <p class="lead">Discover our complete collection</p>
+                <div class="col-12 text-center text-start">
+                    <h1 class="display-4 fw-bold animate-fade-in"><br></h1>
+                    <p class="lead tex-50">────୨ৎ──── Discover our collection ────୨ৎ────    </p>
                 </div>
             </div>
         </div>
